--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,1 +1,7 @@
-.header {}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 92.5%;
+  margin-top: 28px;
+}
