--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,8 @@
 @import url("../vendor/fonts/fonts.css");
 @import url("../blocks/root/root.css");
 @import url("../blocks/page/page.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/header/__lang-links/header__lang-links.css");
+@import url("../blocks/header/__lang-link/header__lang-link.css");
+@import url("../blocks/header/__lang-link-content/header__lang-link-content.css");
+@import url("../blocks/header/__lang-link-content/_active/header__lang-link-content_active.css");
