--- a/blocks/header/__lang-link-content/header__lang-link-content.css
+++ b/blocks/header/__lang-link-content/header__lang-link-content.css
@@ -1,7 +1,8 @@
 .header__lang-link-content {
   color: #fff;
-  font-size: 24px;
   font-weight: 400;
-  line-height: 1.16;
+  font-size: 24px;
+  line-height: 1.17;
+  text-align: right;
   text-decoration: none;
 }
