--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,8 @@
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__list/intro__list.css");
 @import url("../blocks/intro/__list-item-content/intro__list-item-content.css");
+@import url("../blocks/intro/__span-accent/intro__span-accent.css");
+@import url("../blocks/photo-grid/photo-grid.css");
+@import url("../blocks/photo-grid/__grid/photo-grid__grid.css");
+@import url("../blocks/photo-grid/__item/photo-grid__item.css");
+@import url("../blocks/photo-grid/__image/photo-grid__image.css");
