--- a/blocks/photo-grid/__grid/photo-grid__grid.css
+++ b/blocks/photo-grid/__grid/photo-grid__grid.css
@@ -5,5 +5,5 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 16px;
+  gap: 16px;
 }
