--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,7 @@
 @import url("../blocks/places/__card-image/places__card-image.css");
 @import url("../blocks/places/__card-text/places__card-text.css");
 @import url("../blocks/places/__card-paragraph/places__card-paragraph.css");
+@import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__overlay/cover__overlay.css");
+@import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__subtitle/cover__subtitle.css");
