--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -12,3 +12,9 @@
 .cover__overlay:hover {
   background-color: rgba(42, 44, 47, .8);
 }
+
+@media screen and (max-width: 1279px){
+  .cover__overlay {
+    min-height: 640px;
+  }
+}
