--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,4 +2,12 @@
   width: 92.5%;
   background-image: url("../../images/cover-trains.jpg");
   background-size: cover;
+  margin-top: 1px;
+}
+
+@media screen and (max-width: 1279px){
+  .cover {
+    width: 100%;
+    background-size: contain;
+  }
 }
