--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,10 @@
 .lead__image {
+  width: 100%;
   margin-top: 64px;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead__image {
+    margin-top: 56px;
+  }
 }
