--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,10 @@
   width: 77%;
   margin-top: 65px;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    width: 90.6%;
+    margin-top: 57px;
+  }
+}
