--- a/blocks/photo-grid/__grid/photo-grid__grid.css
+++ b/blocks/photo-grid/__grid/photo-grid__grid.css
@@ -7,3 +7,11 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
+
+@media screen and (max-width: 1279px) {
+  .photo-grid__grid {
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
+}
