--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,3 +1,9 @@
 .photo-grid__item {
   height: 213px;
 }
+
+@media screen and (max-width: 1279px) {
+  .photo-grid__item {
+    height: 225px;
+  }
+}
