--- a/blocks/places/__card-image/places__card-image.css
+++ b/blocks/places/__card-image/places__card-image.css
@@ -1,3 +1,9 @@
 .places__card-image {
   max-width: 460px;
 }
+
+@media screen and (max-width: 1279px) {
+  .places__card-image {
+    max-width: 440px;
+  }
+}
