--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -9,3 +9,10 @@
 .places__card:last-child {
   margin: 0;
 }
+
+@media screen and (max-width: 1279px) {
+  .places__card {
+    grid-template-columns: 1fr 456px;
+    gap: 48px 32px;
+  }
+}
