--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,3 +12,10 @@
     margin-top: 57px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    width: 100%;
+    margin-top: 57px;
+  }
+}
