--- a/blocks/photo-grid/__grid/photo-grid__grid.css
+++ b/blocks/photo-grid/__grid/photo-grid__grid.css
@@ -15,3 +15,11 @@
     gap: 14px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .photo-grid__grid {
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
+}
