--- a/blocks/places/__card-title/places__card-title.css
+++ b/blocks/places/__card-title/places__card-title.css
@@ -4,5 +4,17 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
-  color: #fff;
+}
+
+@media screen and (max-width: 1279px){
+  .places__card-title {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 1023px){
+  .places__card-title {
+    max-width: 340px;
+    font-size: 42px;
+  }
 }
