--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -16,3 +16,11 @@
     gap: 48px 32px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .places__card {
+    grid-template-columns: 1fr 352px;
+    gap: 48px 28px;
+    margin-bottom: 72px;
+  }
+}
