--- a/blocks/places/__card-image/places__card-image.css
+++ b/blocks/places/__card-image/places__card-image.css
@@ -13,3 +13,10 @@
     max-width: 340px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .places__card-image {
+    max-width: 320px;
+    margin-top: 30px;
+  }
+}
