--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,15 @@
 .cover__subtitle {
   max-width: 360px;
-  margin: 32px 0 0;
+  margin: 16px 0 0;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
+}
+
+@media screen and (max-width: 767px){
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 114%;
+  }
 }
