--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,3 +6,11 @@
   line-height: 1.06;
   text-align: center;
 }
+
+@media screen and (max-width: 767px){
+  .cover__title {
+    width: 90%;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
