--- a/blocks/footer/__link-content/footer__link-content.css
+++ b/blocks/footer/__link-content/footer__link-content.css
@@ -11,3 +11,10 @@
 .footer__link-content:hover {
   opacity: .8;
 }
+
+@media screen and (max-width: 767px){
+  .footer__link-content {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
