--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,3 +4,9 @@
   list-style: none;
   padding: 0;
 }
+
+@media screen and (max-width: 767px){
+  .footer__links {
+    flex-direction: column;
+  }
+}
