--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -15,3 +15,10 @@
     margin-top: 93px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .intro {
+    width: 90%;
+    margin-top: 68px;
+  }
+}
