--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,11 @@
   line-height: 1.2;
   text-align: center;
 }
+
+@media screen and (max-width: 767px){
+ .lead__subtitle {
+   margin-top: 12px;
+   font-size: 16px;
+   line-height: 1.25;
+ }
+}
