--- a/blocks/photo-grid/__grid/photo-grid__grid.css
+++ b/blocks/photo-grid/__grid/photo-grid__grid.css
@@ -23,3 +23,11 @@
     gap: 16px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .photo-grid__grid {
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: 1fr;
+    gap: 12px;
+  }
+}
