--- a/blocks/places/__card-link/places__card-link.css
+++ b/blocks/places/__card-link/places__card-link.css
@@ -9,3 +9,9 @@
 .places__card-link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 767px){
+  .places__card-link {
+    display: none;
+  }
+}
