--- a/blocks/places/__card-title/places__card-title.css
+++ b/blocks/places/__card-title/places__card-title.css
@@ -18,3 +18,19 @@
     font-size: 42px;
   }
 }
+
+@media screen and (max-width: 1023px){
+  .places__card-title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .places__card-title {
+    width: 90%;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
