--- a/blocks/places/__card-url-heading/places__card-url-heading.css
+++ b/blocks/places/__card-url-heading/places__card-url-heading.css
@@ -5,3 +5,10 @@
   letter-spacing: 0.2em;
   color: #aaa;
 }
+
+@media screen and (max-width: 767px){
+  .places__card-url-heading {
+    position: absolute;
+    display: none;
+  }
+}
