--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,13 @@
 
 @media screen and (max-width: 1279px){
   .cover {
-    width: 100%;
-    background-size: contain;
+    width: 100vw;
+    background-size: cover;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .cover {
+    margin-top: 68px;
   }
 }
