--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,14 +8,14 @@
 
 @media screen and (max-width: 1279px){
   .footer {
-    width: 90.6%;
+    width: 90.6vw;
   }
 }
 
 @media screen and (max-width: 1023px){
   .footer {
     margin-top: 72px;
-    width: 93.8%;
+    width: 93.8vw;
   }
 }
 
@@ -23,6 +23,6 @@
   .footer {
     flex-direction: column;
     margin-top: 50px;
-    width: 90%;
+    width: 90vw;
   }
 }
