--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,19 +8,19 @@
 
 @media screen and (max-width: 1279px){
   .header {
-    width: 90.6%;
+    width: 90.6vw;
   }
 }
 
 @media screen and (max-width: 1023px){
   .header {
-    width: 93.8%;
+    width: 93.8vw;
   }
 }
 
 @media screen and (max-width: 767px){
   .header {
-    width: 90%;
+    width: 90vw;
     margin-top: 16px;
   }
 }
