--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,20 +8,19 @@
 
 @media screen and (max-width: 1279px) {
   .lead {
-    width: 90.6%;
+    width: 90.6vw;
     margin-top: 57px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    width: 100%;
-    margin-top: 57px;
+    width: 100vw;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    margin-top: 52px;
+    margin-top: 51px;
   }
 }
