--- a/blocks/photo-grid/__grid/photo-grid__grid.css
+++ b/blocks/photo-grid/__grid/photo-grid__grid.css
@@ -5,14 +5,14 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
+  gap: 13px 16px;
 }
 
 @media screen and (max-width: 1279px) {
   .photo-grid__grid {
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    gap: 14px;
+    gap: 11px 14px;
   }
 }
 
@@ -20,7 +20,7 @@
   .photo-grid__grid {
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
+    gap: 13px 16px;
   }
 }
 
@@ -28,6 +28,6 @@
   .photo-grid__grid {
     grid-template-rows: repeat(12, 1fr);
     grid-template-columns: 1fr;
-    gap: 12px;
+    gap: 9px;
   }
 }
