--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -6,18 +6,18 @@
 
 @media screen and (max-width: 1279px) {
   .photo-grid__image {
-    max-width: 300px;
+    max-width: 29.3vw;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid__image {
-    max-width: 352px;
+    max-width: 45.8vw;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid__image {
-    max-width: 288px;
+    max-width: 90vw;
   }
 }
