--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,11 @@
 .photo-grid {
-  margin-top: 77px;
+  margin-top: 76px;
+}
+
+@media screen and (max-width: 1279px){
+  .photo-grid {
+    margin-top: 77px;
+  }
 }
 
 @media screen and (max-width: 1023px){
