--- a/blocks/places/__card-image/places__card-image.css
+++ b/blocks/places/__card-image/places__card-image.css
@@ -4,19 +4,19 @@
 
 @media screen and (max-width: 1279px) {
   .places__card-image {
-    max-width: 440px;
+    max-width: 43vw;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places__card-image {
-    max-width: 340px;
+    max-width: 44.3vw;
   }
 }
 
 @media screen and (max-width: 767px) {
   .places__card-image {
-    max-width: 320px;
-    margin-top: 30px;
+    max-width: 100vw;
+    margin-top: 27px;
   }
 }
