--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,11 @@
 .places {
-  margin-top: 91px;
+  margin-top: 89px;
+}
+
+@media screen and (max-width: 1023px){
+  .places {
+    margin-top: 86px;
+  }
 }
 
 @media screen and (max-width: 767px){
