--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 1279px) {
   .lead {
-    width: 90.6%;
+    width: 90.6vw;
     margin-top: 57px;
   }
 }
@@ -16,12 +16,11 @@
 @media screen and (max-width: 1023px) {
   .lead {
     width: 100%;
-    margin-top: 57px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    margin-top: 52px;
+    margin-top: 51px;
   }
 }
