--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,20 +6,20 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1279px) {
-  .page {
-    max-width: 1024px;
-  }
-}
+/*@media screen and (max-width: 1279px) {*/
+/*  .page {*/
+/*    max-width: 1024px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 1023px) {
-  .page {
-    max-width: 768px;
-  }
-}
+/*@media screen and (max-width: 1023px) {*/
+/*  .page {*/
+/*    max-width: 768px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 767px) {
-  .page {
-    max-width: 320px;
-  }
-}
+/*@media screen and (max-width: 767px) {*/
+/*  .page {*/
+/*    max-width: 320px;*/
+/*  }*/
+/*}*/
