--- a/blocks/places/__card-title/places__card-title.css
+++ b/blocks/places/__card-title/places__card-title.css
@@ -22,13 +22,14 @@
 @media screen and (max-width: 1023px){
   .places__card-title {
     max-width: 288px;
-    font-size: 32px;
-    line-height: 1.09;
+    font-size: 42px;
+    line-height: 1.1;
   }
 }
 
 @media screen and (max-width: 767px){
   .places__card-title {
+    align-self: center;
     width: 90%;
     font-size: 32px;
     line-height: 1.09;
