--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -12,25 +12,26 @@
 
 @media screen and (max-width: 1279px) {
   .places__card {
-    grid-template-columns: 1fr 456px;
+    grid-template-columns: 1fr 44.5vw;
     gap: 48px 32px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places__card {
-    grid-template-columns: 1fr 352px;
+    grid-template-columns: 1fr 45.8vw;
     gap: 48px 28px;
-    margin-bottom: 72px;
+    margin-bottom: 63px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .places__card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0;
-    margin-bottom: 56px;
+    margin: 0 auto 56px;
   }
 }
