--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url("../blocks/header/__lang-link/header__lang-link.css");
 @import url("../blocks/header/__lang-link-content/header__lang-link-content.css");
 @import url("../blocks/header/__lang-link-content/_active/header__lang-link-content_active.css");
+@import url("../blocks/main/main.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
