--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,6 +2,7 @@
   width: 92.5%;
   background-image: url("../../images/cover-trains.jpg");
   background-size: cover;
+  background-position: center;
   margin-top: 92px;
 }
 
