fixed lines height

--- a/blocks/header/__lang-link-content/header__lang-link-content.css
+++ b/blocks/header/__lang-link-content/header__lang-link-content.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 767px) {
   .header__lang-link-content {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.11;
   }
 }
