--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -10,6 +10,6 @@
 @media screen and (max-width: 767px){
   .cover__subtitle {
     font-size: 14px;
-    line-height: 114%;
+    line-height: 1.14;
   }
 }
